# EPL

./: .env  .gitignore  LICENSE  README.md  pyproject.toml
epl/: README.md  pyproject.toml  setup.cfg  setup.py
epl/epl/: assets.py  assets_new.py  definitions.py  resources.py  schedules.py
epl_dbt/: dbt_project.yml  packages.yml  profiles.yml
epl_dbt/models/: docs.md  overview.md
epl_dbt/models/dim/: dim_chip_played.sql  dim_events.sql  dim_gameweek_info.sql  dim_goals_conceded_away.sql  dim_goals_conceded_home.sql  dim_goals_scored_away.sql  dim_goals_scored_home.sql  dim_injury.sql  dim_results.sql  dim_standings.sql  dim_team_goals_scored_diffrence.sql  dim_team_of_gameweek.sql  dim_teams.sql  dim_transfers_in_gameweek.sql  dim_transfers_out_gameweek.sql  schema.yml
epl_dbt/models/fact/: fact_players_info.sql
epl_dbt/models/src/: schema.yml  sources.yml  src_chip_plays.sql  src_element_stats.sql  src_element_types.sql  src_elements.sql  src_epl_data_table.sql  src_events.sql  src_game_settings_percentile_ranks.sql  src_matches.sql  src_phases.sql  src_teams.sql  src_tiebreak_stata.sql
epl_dbt/snapshots/: Gameweek_Team.sql
epl_dbt/tests/: dim_minimun_chip.sql
streamlit_app/: app.py  app2.py  app3.py  main_app.py
